--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,10 +1,10 @@
 .introducao-bg {
     background-color: #404040;
-    margin-top: 4rem;
+    margin-top: 2rem;
 }
 
 .introducao {
-    padding: 60px 20px;
+    padding: 60px 20px 20px;
 }
 
 .introducao h1 {
