change the introduction

--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -7,6 +7,7 @@
     padding: 60px 20px 20px;
 }
 
+
 .introducao h1 {
     font-size: 3rem;
     margin-bottom: 10px;
@@ -19,6 +20,14 @@
     margin: 0 auto 30px auto;
     color: #F2F2F2;
 }
+
+.introducao2 p {
+    justify-content: flex-end;
+    max-width: 70ch;
+    margin: 0 auto 30px auto;
+    color: #F2F2F2;
+}
+
 
 .minhas-redes{
     display: flex;
