--- a/css/home/skills.css
+++ b/css/home/skills.css
@@ -1,7 +1,3 @@
-.a1{
-display: flex;
-}
-
 .skills {
     display: flex;
     flex-wrap: wrap;
@@ -13,8 +9,7 @@ display: flex;
 
 .skills p {
     font-weight: bold;
-    padding-right: 10px;
-    text:align-center;
+    padding: auto;
 }
 
 .tech-icones {
