--- a/css/global/componentes.css
+++ b/css/global/componentes.css
@@ -1,7 +1,7 @@
-.container {
+.container{
     max-width: 1500px;
     padding: 0px 20px;
-    margin: 0px auto 250px;
+    margin: 0px auto 7%;
     box-sizing: border-box;
 }
 
