--- a/css/global/componentes.css
+++ b/css/global/componentes.css
@@ -1,16 +1,10 @@
 .container{
-    max-width: 1500px;
+    max-width: 100%;
     padding: 0px 20px;
-    margin: 0px auto 7%;
+    margin: 5%;
     box-sizing: border-box;
 }
 
-.container2 {
-    max-width: 1500px;
-    padding: 45px 20px;
-    margin: 0px auto 150px;
-    box-sizing: border-box;
-}
 
 .titulo {
     line-height: 1.15;
@@ -26,6 +20,41 @@
     letter-spacing: 1px;
     display: block;
 }
+
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.popup-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+#close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+#close:hover,
+#close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 
 @media (max-width: 500px){
     .container {
