--- a/css/home/skills.css
+++ b/css/home/skills.css
@@ -1,27 +1,31 @@
 .skills {
     display: flex;
     flex-wrap: wrap;
-    margin: 50px auto 150px auto;
+    margin: 50px auto 200px;
     align-items: center;
     justify-content: center;
     gap: 20px;
 }
 
 .skills p {
-    font-weight: bold;
-    padding: auto;
-}
+    color: rgb(255, 255, 255);
+    position: absolute;
+    width: auto;
+    text-align: justify;
+    display:contents;
+    flex-wrap: wrap;
+} 
 
 .tech-icones {
     display: flex;
     flex-wrap: wrap;
-    gap: 25px;
+    gap: 50px;
 }
 
 .tech-icones li {
     width: 50px;
     height: 50px;
-    background-color: #fff;
+    background-color: #ffffff;
     border-radius: 50%;
     display: flex;
     align-items: center;
