chage de position of hard skills

--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -25,14 +25,7 @@
 .introducao p {
     max-width: 100ch;
     margin: 0 auto 30px auto;
-    color: #F2F2F2;
-    text-align: center;
-}
-
-.introducao2 p {
-    max-width: 100ch;
-    margin: 0 auto 30px auto;
-    color: #F2F2F2;
+    color: #ffffff;
     text-align: center;
 }
 
