--- a/css/global/componentes.css
+++ b/css/global/componentes.css
@@ -5,6 +5,14 @@
     box-sizing: border-box;
 }
 
+.containernav{
+    max-width: 100%;
+    padding: 0px 15px;
+    margin: 5%;
+    box-sizing: border-box;
+    justify-content: start;
+}
+
 
 .titulo {
     line-height: 1.15;
