--- a/css/global/componentes.css
+++ b/css/global/componentes.css
@@ -1,7 +1,7 @@
 .container{
     max-width: 100%;
     padding: 0px 20px;
-    margin: 5%;
+    margin-top: 7%;
     box-sizing: border-box;
     flex-wrap: wrap;
 }
